<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/nav_Profile"
        android:title="@string/Profile"
        android:icon="@drawable/profile"/>
    <item
        android:id="@+id/nav_BusTiming"
        android:title="@string/BusTiming"
        android:icon="@drawable/ic_directions_bus_black_24dp"/>
    <item
        android:id="@+id/nav_ContactUs"
        android:title="@string/ContactUs"
        android:icon="@drawable/contact"/>
    <item
        android:id="@+id/nav_Feedback"
        android:title="@string/Feedback"
        android:icon="@drawable/feedback"/>
    <item
        android:id="@+id/nav_Map"
        android:title="@string/Location"
        android:icon="@drawable/ic_map_black_24dp"/>

    <item
        android:id="@+id/nav_LogOut"
        android:title="@string/LogOut"
        android:icon="@drawable/logout"/>

    <item android:title="@string/Communicate" android:icon="@drawable/communicate">
        <menu>
            <item
                android:id="@+id/nav_Share"
                android:icon="@drawable/share"
                android:title="@string/Share"/>
             <item
                 android:id="@+id/nav_About"
                 android:icon="@drawable/ic_people_black_24dp"
                 android:title="@string/About"/>

        </menu>
     </item>
</menu>